Closed Bug 202555 Opened 23 years ago Closed 23 years ago

ExtractProxyInfo not honoring permitHttp flag! [was: IMAP port "disabled for security reasons"]

Categories

(Core :: Networking, defect, P1)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: bugzilla, Assigned: darin.moz)

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030418 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030418 When I try to load a message on an IMAP server, I get a dialog box stating access to the port has been disabled for security reasons, followed by an IMAP connection error dialog. I tried overriding the protection by adding port 143 to network.security.ports.banned.override, and then I got "This request was not recognized. Perform a trace." in the message area, possibly from my proxy, which would be even more bizarre. Reproducible: Always Steps to Reproduce: 1. Click on an IMAP account's inbox 2. Click on a message Actual Results: See above Expected Results: Display the message body :)
I'm guessing your imap server wants you to use SSL - just configure your imap server account settings in Mozilla to use SSL. I don't think this is a client bug - i think your server administrator just turned off access to IMAP on the default, non-SSL port. I could be wrong, but that's what it sounds like.
No, I really think it's a bug. I've got 2 IMAP accounts and the problem occurred on both. I switched back to an older nightly now, and they're both working properly again.
yes, sorry, that is Mozilla code giving you that error message, but it's not the IMAP code. Do you have other ports disallowed? There must be something about your configuration that's special since the vast majority of users don't need to do anything with network.security.ports.banned.override - The IMAP code allows IMAP to be run on any port. Do you have port 143 on your banned list? Perhaps the necko code that handles overriding banned ports is broken...
I've been having the same problems since the proxy-auto-config failover changes were committed but nobody else was able to reproduce. I see the problem on both Solaris and Linux with an proxy.pac file referenced by a file: url. If the default result is DIRECT then imap works, if it points to a PROXY then imap urls are sent to the http proxy which gets confused. This is a serious regression.
Status: UNCONFIRMED → NEW
Ever confirmed: true
I've never changed anything to the banned ports except the override I mentioned earlier on, but I removed that one again. As far as I know, my port configuration is normal. But I _am_ using a proxy through PAC.
-> me
Assignee: bienvenu → darin
Severity: major → critical
Component: Networking: IMAP → Networking
Flags: blocking1.4b?
Keywords: regression
Priority: -- → P1
Product: MailNews → Browser
Target Milestone: --- → mozilla1.4beta
QA Contact: gchan → benc
Status: NEW → ASSIGNED
Summary: IMAP port "disabled for security reasons" → ExtractProxyInfo not honoring permitHttp flag! [was: IMAP port "disabled for security reasons"]
Attached patch v1 patchSplinter Review
left out a very important check!!
Attachment #120991 - Flags: superreview?(alecf)
Attachment #120991 - Flags: review?(gordon)
Comment on attachment 120991 [details] [diff] [review] v1 patch r=gordon
Attachment #120991 - Flags: review?(gordon) → review+
Attachment #120991 - Flags: superreview?(alecf) → superreview?(bzbarsky)
Attachment #120991 - Flags: superreview?(bzbarsky) → superreview+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Flags: blocking1.4b?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: