fixes bug 202555 "ExtractProxyInfo not honoring permitHttp flag! [was: IMAP port "disabled for security reasons"]" r=gordon sr=bz